--- a/package.yml
+++ b/package.yml
@@ -1,7 +1,7 @@
 # Alle hier gesetzten Werte können über $addon->getProperty($key) abgefragt werden
 
 package: blocksettings																							#Pflichtfeld
-version: '1.0 beta'																									#Pflichtfeld
+version: '1.0'																									#Pflichtfeld
 author: © Falko Müller
 supportpage: https://github.com/iceman-fx/blocksettings
 
@@ -15,4 +15,4 @@ page:
         help: { title: 'translate:a1604_help', icon: rex-icon fa-question-circle, itemclass: pull-right }
 
 requires:
-    redaxo: '^5.3.0' 																						#benötigt mindestens REDAXO 5.3
+    redaxo: '^5.7.0' 																						#benötigt mindestens REDAXO 5.3
